--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <nav>
-            <a class="it" href="Project.html">Home</a>
+            <a class="it" href="index.html">Home</a>
             <a href="Eiilm.html">Eiilm Kolkata</a>
             <a href="#">News</a>
             <a href="#">Contact</a>
