--- a/Eiilm.html
+++ b/Eiilm.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <nav>
-            <a href="Project.html">Home</a>
+            <a href="index.html">Home</a>
             <a class="it" href="Eiilm.html">Eiilm Kolkata</a>
             <a href="#">News</a>
             <a href="#">Contact</a>
