--- a/Eiilm.html
+++ b/Eiilm.html
@@ -15,9 +15,9 @@
         <nav>
             <a href="index.html">Home</a>
             <a class="it" href="Eiilm.html">Eiilm Kolkata</a>
-            <a href="#">News</a>
-            <a href="#">Contact</a>
-            <a href="#">About</a>
+            <a href="News.html">News</a>
+            <a href="Contact.html">Contact</a>
+            <a href="About.html">About</a>
         </nav>
     </header>
     <div class="main">
