--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <nav>
             <a class="it" href="index.html">Home</a>
             <a href="Eiilm.html">Eiilm Kolkata</a>
-            <a href="#">News</a>
-            <a href="#">Contact</a>
-            <a href="#">About</a>
+            <a href="News.html">News</a>
+            <a href="Contact.html">Contact</a>
+            <a href="About.html">About</a>
         </nav>
     </header>
 
@@ -26,18 +26,21 @@
         <h2 class="book">From January 18, 2024 <br>
             To January 31, 2024</h2>
         <img class="ok" src="book-fair.jpg" alt="Book Fair img">
-        <div class="content"><p class="pra">
-            The International Kolkata Book Fair is among the largest book fairs in terms of number of visitors.
-            Publishers from different parts of the India and abroad regularly participate in this book fair which
-            takes place in January every year. <br><br>
+        <div class="content">
+            <p class="pra">
+                The International Kolkata Book Fair is among the largest book fairs in terms of number of visitors.
+                Publishers from different parts of the India and abroad regularly participate in this book fair which
+                takes place in January every year. <br><br>
 
-            Here the book lovers come across a huge variety of books from all over the world. Every year a country
-            is invited to participate as the Focal Theme to showcase its literature and culture. <br><br>
+                Here the book lovers come across a huge variety of books from all over the world. Every year a country
+                is invited to participate as the Focal Theme to showcase its literature and culture. <br><br>
 
-            Countries from all continents participate in the fair and delegations consisting of authors, artists and
-            critics visit the fair to exchange views with their counterparts in India on this occasion. A number of
-            important seminars, symposia, lectures and debates attended by leading speakers from all over the world are
-            also organized during the fair.</p>
+                Countries from all continents participate in the fair and delegations consisting of authors, artists and
+                critics visit the fair to exchange views with their counterparts in India on this occasion. A number of
+                important seminars, symposia, lectures and debates attended by leading speakers from all over the world
+                are
+                also organized during the fair.
+            </p>
         </div>
         <h2 class="book">15, Central Park, Sector II, Bidhannagar, Kolkata, West Bengal 700091</h2>
     </div>
@@ -49,7 +52,7 @@
         <p class="del">9163393666 | 9163393668</p>
         <p class="del">admission@eiilm.co.in</p>
     </div>
-    
+
 </body>
 
 </html>
