--- a/About.html
+++ b/About.html
@@ -4,7 +4,7 @@
 <head>
     <link rel="website icon" href="logo.jpeg" type="jpg">
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
 
     <title>Kolkata Book Fair</title>
     <link rel="stylesheet" href="style.css">
